UI: Add scroll-padding-top to fix anchor links hidden behind fixed header

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 80px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
